--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -5,11 +5,7 @@
         {% include blog_header.html %}
 
         <main class="blogmain">
-            <header>
-                <h1 class="article-title">{{ page.title }}</h1>
-                <p class="article-time">
-                    {{ page.time }},  <span>{{ page.location }}</span>
-                </p>
+            <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
             </header>
             {{ content }}
             {% include post_footer.html %}
