--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -5,7 +5,11 @@
         {% include blog_header.html %}
 
         <main class="blogmain">
-            <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
+            <header>
+                <h1 class="article-title">{{ page.title }}</h1>
+                <p class="article-time">
+                    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
+                </p>
             </header>
             {{ content }}
             {% include post_footer.html %}
