--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -6,7 +6,7 @@
 
         <main class="blogmain">
             <header>
-                <h1 class="article-title">{{ page.title }}</h1>
+                <h1 class="article-title">{{ post.title }}</h1>
                 <p class="article-time">
                     <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
                 </p>
