--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -5,12 +5,12 @@
         {% include blog_header.html %}
 
         <main class="blogmain">
-            <header>
-                <h1 class="article-title">{{ post.title }}</h1>
-                <p class="article-time">
-                    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-                </p>
-            </header>
+            <header>1
+        <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
+        <h2 class="post-title">
+            <a href="{{ post.url }}">  {{ post.title }} </a>
+        </h2>
+    </header>
             {{ content }}
             {% include post_footer.html %}
         </main>
