--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+
+<!-- mathjax -->
+{% if page.mathjax %}
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+{% endif %}
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    showProcessingMessages: false,
+    tex2jax: { inlineMath: [['$','$'],['\\(','\\)']] }
+  });
+</script>
+
 <html>
     {% include head.html %}
     <body>
