--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,6 +1,6 @@
 <footer class="article-footer">
     <section class="author">
         <h4><a href="/about.html"></a></h4>
-        <a href="mailto:540075580@qq.com">540075580@qq.com</a>
+        <a href="mailto:suhuade@foxmail.com">suhuade@foxmail.com</a>
     </section>
 </footer>
